# toros

./: CMakeLists.txt  LICENSE  README.md
inputs/: input_1.txt  input_5.txt  input_6.txt
source/: command.hpp  command_factory.cpp  command_factory.hpp  main.cpp  model.cpp  model.hpp
source/commands/: left_command.cpp  left_command.hpp  move_command.cpp  move_command.hpp  place_command.cpp  place_command.hpp  report_command.cpp  report_command.hpp  right_command.cpp  right_command.hpp
source/utils/: tokenizer.cpp  tokenizer.hpp
test/: command_factory_tests.cpp  main.cpp  model_tests.cpp
test/utils/: tokenizer_tests.cpp
